apps/mealie/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  hostnames:
  - mealie.homelab
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homelab-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: mealie
      port: 9000
    matches:
    - path:
        type: PathPrefix
        value: /
